# ClipStudioPaint-Grayscale-Viewer

./: .gitignore  CMakeLists.txt  README.ja-JP.md  README.md  README.zh-CN.md  README.zh-TW.md  installer.iss
.github/workflows/: build-release.yml  build.yml  release.yml
resources/: app.manifest
src/: main.cpp  main_console.cpp
src/core/: Application.cpp  Application.h
src/d3d/: D3DOverlayRenderer.cpp  D3DOverlayRenderer.h
src/gui/: MainWindow.cpp  MainWindow.h
src/input/: HotkeyManager.cpp  HotkeyManager.h
src/magnification/: GrayscaleEffect.cpp  GrayscaleEffect.h  MagnifierOverlay.cpp  MagnifierOverlay.h
src/util/: Logger.cpp  Logger.h
src/window/: FocusTracker.cpp  FocusTracker.h  WindowFinder.cpp  WindowFinder.h
